--- a/package.json
+++ b/package.json
@@ -4,10 +4,22 @@
   "main": "index.js",
   "author": "storonaot",
   "license": "MIT",
+  "scripts": {
+    "start": "supervisor app.js"
+  },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
+    "connect-mongo": "^2.0.0",
+    "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.2",
-    "path": "^0.12.7"
+    "express-session": "^1.15.6",
+    "http": "^0.0.0",
+    "mongoose": "^4.12.4",
+    "nconf": "^0.8.5",
+    "path": "^0.12.7",
+    "util": "^0.10.3"
   }
 }
