--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.12.4",
     "nconf": "^0.8.5",
     "path": "^0.12.7",
+    "socket.io": "^2.0.4",
     "util": "^0.10.3"
   }
 }
