--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "^1.18.2",
+    "connect": "^3.6.5",
     "connect-mongo": "^2.0.0",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "errorhandler": "^1.5.0",
