--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medical-card-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "author": "storonaot",
   "license": "MIT",
   "scripts": {
